# presenter/controller/post.go
@@ -21,12 +21,12 @@ func NewPostController(postService usecase.PostService) *PostController {
 
 // Create
 //
+//	@Security		Authorization
 //	@Summary		Create
 //	@Description	Create
 //	@Tags			Post
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization		header		string						true	"authorization token"
 //	@Param			CreatePostRequest	body		request.CreatePostRequest	true	"CreatePostRequest"
 //	@Success		200					{object}	model.Post					"success"
 //	@Router			/v1/api/posts [POST]
@@ -35,8 +35,12 @@ func (h *PostController) Create(c echo.Context) error {
 	if err := c.Bind(&req); err != nil {
 		return h.ResponseValidationError(c, err)
 	}
-	req.UserId = utils.GetUserStringIDFromContext(c)
+	userId, err := utils.GetUserUUIDFromContext(c)
+	if err != nil {
+		return h.ResponseValidationError(c, err)
+	}
 
+	req.UserId = userId
 	res, err := h.postService.Create(c.Request().Context(), req)
 	if err != nil {
 		return h.ResponseError(c, err)
@@ -47,12 +51,12 @@ func (h *PostController) Create(c echo.Context) error {
 
 // Update
 //
+//	@Security		Authorization
 //	@Summary		Update
 //	@Description	Update
 //	@Tags			Post
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization		header		string						true	"authorization token"
 //	@Param			UpdatePostRequest	body		request.UpdatePostRequest	true	"UpdatePostRequest"
 //	@Success		200					{object}	model.Post					"success"
 //	@Router			/v1/api/posts [PUT]
@@ -61,7 +65,12 @@ func (h *PostController) Update(c echo.Context) error {
 	if err := c.Bind(&req); err != nil {
 		return h.ResponseValidationError(c, err)
 	}
-	req.UserId = utils.GetUserStringIDFromContext(c)
+	userId, err := utils.GetUserUUIDFromContext(c)
+	if err != nil {
+		return h.ResponseValidationError(c, err)
+	}
+
+	req.UserId = userId
 
 	res, err := h.postService.Update(c.Request().Context(), req)
 	if err != nil {
@@ -73,12 +82,12 @@ func (h *PostController) Update(c echo.Context) error {
 
 // GetList
 //
+//	@Security		Authorization
 //	@Summary		GetList
 //	@Description	GetList
 //	@Tags			Post
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization		header		string						true	"authorization token"
 //	@Param			GetListPostRequest	body		request.GetListPostRequest	true	"GetListPostRequest"
 //	@Success		200					{object}	[]model.Post				"success"
 //	@Router			/v1/api/posts [GET]
@@ -98,18 +107,27 @@ func (h *PostController) GetList(c echo.Context) error {
 
 // Delete
 //
+//	@Security		Authorization
 //	@Summary		Delete
 //	@Description	Delete
 //	@Tags			Post
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string					true	"authorization token"
-//	@Param			id				path		string					true	"id"
-//	@Success		200				{object}	entity.SimpleResponse	"success"
+//	@Param			id	path		string					true	"id"
+//	@Success		200	{object}	entity.SimpleResponse	"success"
 //	@Router			/v1/api/posts/{id} [DELETE]
 func (h *PostController) Delete(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
-	if err := h.postService.Delete(c.Request().Context(), id); err != nil {
+	userId, err := utils.GetUserUUIDFromContext(c)
+	if err != nil {
+		return h.ResponseValidationError(c, err)
+	}
+
+	req := request.DeletePostRequest{
+		ID:     id,
+		UserId: userId,
+	}
+	if err := h.postService.Delete(c.Request().Context(), req); err != nil {
 		return h.ResponseError(c, err)
 	}
 	return h.Response(c, http.StatusOK, "Success", id)
@@ -117,14 +135,14 @@ func (h *PostController) Delete(c echo.Context) error {
 
 // GetOne
 //
+//	@Security		Authorization
 //	@Summary		GetOne
 //	@Description	GetOne
 //	@Tags			Post
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string		true	"authorization token"
-//	@Success		200				{object}	model.Post	"success"
-//	@Param			id				path		string		true	"id"
+//	@Success		200	{object}	model.Post	"success"
+//	@Param			id	path		string		true	"id"
 //	@Router			/v1/api/posts/{id} [GET]
 func (h *PostController) GetOne(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
