# presenter/controller/user.go
@@ -21,19 +21,24 @@ func NewUserController(userService usecase.UserService) *UserController {
 
 // Update
 //
+//	@Security		Authorization
 //	@Summary		Update
 //	@Description	Update
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string		true	"authorization token"
-//	@Success		200				{object}	model.User	"success"
+//	@Success		200	{object}	model.User	"success"
 //	@Router			/v1/api/users [PUT]
 func (h *UserController) Update(c echo.Context) error {
 	var req request.UpdateUserRequest
 	if err := c.Bind(&req); err != nil {
 		return h.ResponseValidationError(c, err)
 	}
+	userId, err := utils.GetUserUUIDFromContext(c)
+	if err != nil {
+		return h.ResponseValidationError(c, err)
+	}
+	req.Id = userId.String()
 
 	res, err := h.userService.Update(c.Request().Context(), req)
 	if err != nil {
@@ -43,45 +48,19 @@ func (h *UserController) Update(c echo.Context) error {
 	return h.Response(c, http.StatusOK, "Success", res)
 }
 
-// GetList
-//
-//	@Summary		GetList
-//	@Description	GetList
-//	@Tags			User
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string			true	"authorization token"
-//	@Success		200				{object}	[]model.User	"success"
-//	@Router			/v1/api/users [GET]
-func (h *UserController) GetList(c echo.Context) error {
-	var req request.GetListUserRequest
-	if err := c.Bind(&req); err != nil {
-		return h.ResponseValidationError(c, err)
-	}
-
-	data, total, err := h.userService.GetList(c.Request().Context(), req)
-	if err != nil {
-		return h.ResponseError(c, err)
-	}
-
-	return h.ResponseList(c, "Success", total, data)
-}
-
 // Delete
 //
+//	@Security		Authorization
 //	@Summary		Delete
 //	@Description	Delete
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string					true	"authorization token"
-//	@Param			id				path		string					true	"id"
-//	@Success		200				{object}	entity.SimpleResponse	"success"
-//	@Router			/v1/api/users/{id} [DELETE]
+//	@Success		200	{object}	entity.SimpleResponse	"success"
+//	@Router			/v1/api/users [DELETE]
 func (h *UserController) Delete(c echo.Context) error {
-	id := utils.ParseStringIDFromUri(c)
-	err := h.userService.Delete(c.Request().Context(), id)
-	if err != nil {
+	userId := utils.GetUserStringIDFromContext(c)
+	if err := h.userService.Delete(c.Request().Context(), userId); err != nil {
 		return h.ResponseError(c, err)
 	}
 	return h.Response(c, http.StatusOK, "Success", nil)
@@ -89,18 +68,17 @@ func (h *UserController) Delete(c echo.Context) error {
 
 // GetOne
 //
+//	@Security		Authorization
 //	@Summary		GetOne
 //	@Description	GetOne
 //	@Tags			User
 //	@Accept			json
 //	@Produce		json
-//	@Param			Authorization	header		string		true	"authorization token"
-//	@Param			id				path		string		true	"id"
-//	@Success		200				{object}	model.User	"success"
-//	@Router			/v1/api/users/{id} [GET]
+//	@Success		200	{object}	model.User	"success"
+//	@Router			/v1/api/users [GET]
 func (h *UserController) GetOne(c echo.Context) error {
-	id := utils.ParseStringIDFromUri(c)
-	res, err := h.userService.GetOne(c.Request().Context(), id)
+	userId := utils.GetUserStringIDFromContext(c)
+	res, err := h.userService.GetOne(c.Request().Context(), userId)
 	if err != nil {
 		return h.ResponseError(c, err)
 	}
